fix: testing tokens and modifying some lines